tests/lean/doLetLoop.lean.expected.out
doLetLoop.lean:4:0: error: unexpected end of input
